# IR_LED_DRV

./: .gitignore  Build-ProductionImage.ps1  Program-LedHex.ps1  Project.ewd  Project.ewp  README.md  STVD_IR_LED_DRV.stw  buildstamp.c  stm8_interrupt_vector.c  stvd_ir_led_drv_project.stp  touch.cmd
Desktop/: .clang-format  BeaconOrder.h  BrightNeighbors.cpp  CMakeLists.txt  DumpPatterns.cpp  DumpSPI.cpp  GenerateMask.cpp  MatchPatterns.cpp  PatternString.h  Patterns.h  Positions.h  format.sh
Documentation/: Commands.docx
Project/: Project.dep  Project.ewd  Project.ewp  Project.ewt  Project.eww
Project/Debug/Exe/: Project_debug.hex  ir_led_drvt_debug.hex
Project/Release/Exe/: ir_led_drvt_15_05_test.hex  ir_led_drvt_7_05.hex  ir_led_drvt_8_05.hex  ir_led_drvt_8_05_test.hex
Project/STM8S103/Exe/: Project.out
Project/User/: array_init.c  array_init.h  main.c  stm8s_it.c  uart_protocol.c  uart_protocol.h
Project/settings/: Project.Release.cspy.bat  Project.dbgdt  Project.dni  Project.wsdt  Project.wspos
Schematics/: EVK_PCBWLEDS_U.DSN  FLEX_PCBWLEDS.DSN  IR_EVB_REV1.xls  RIGID_PCBWLEDS.DSN
Schematics/PCB production files/: vb_ais.txt
Schematics/PCB production files/Gerber/: DrillDrawingThrough.gdo  EtchLayer_Bot.gdo  EtchLayer_Top.gdo  GeneratedSilkscreenTop.gdo  SoldermaskBottom.gdo  SoldermaskTop.gdo
Schematics/PCB production files/NCDrill/: ThruHolePlated.ncd
Template/: Project.dep  Project.ewd  Project.ewp  Project.ewt
Template/settings/: Project.STM8S103.cspy.bat  Project.STM8S208.cspy.bat  Project.dni  Project.wsdt  Project.wspos
User/: .clang-format  Config.h  MCUConfig.h  array_init.c  array_init.h  format.cmd  main.c  main.h  uart_protocol.c  uart_protocol.h
